# skilllite

./: .env.example  .env.example.full  .gitignore  .license-whitelist.json  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_GUIDELINES.md  INSTALL_SANDBOX.md  LICENSE  README.md  README_CN.md  THIRD_PARTY_LICENSES.md  benchmark_results.json  deny.toml  evolution_log.txt  index.html  install.ps1  install.sh  opencode.json  package.json  requirements.txt  simple_demo.py  simple_demo_minimal.py  simple_demo_v2.py  test_mcp_client.py  xiaohongshu_input.json
crates/skilllite-agent/: Cargo.toml
crates/skilllite-agent/src/: agent_loop.rs  artifact_store.rs  capability_gap_analyzer.rs  capability_registry.rs  chat.rs  chat_session.rs  dependency_resolver.rs  env_profiler.rs  error.rs  evolution.rs  goal_boundaries.rs  goal_contract.rs  high_risk.rs  lib.rs  llm.rs  locale_prompt.rs  mod.rs  planning_guard.rs  planning_rules.rs  prompt.rs  rpc.rs  run_checkpoint.rs  skills.rs  soul.rs  task_planner.rs  tool_hint_resolver.rs  types.rs
crates/skilllite-agent/src/agent_loop/: clarification.rs  execution.rs  helpers.rs  llm_call.rs  mod.rs  planning.rs  reflection.rs
crates/skilllite-agent/src/evolution/: external_learner.rs  feedback.rs  mod.rs  prompt_learner.rs  seed.rs  skill_synth.rs
crates/skilllite-agent/src/extensions/: memory.rs  mod.rs  registry.rs
crates/skilllite-agent/src/llm/: claude.rs  mod.rs  openai.rs  tests.rs
crates/skilllite-agent/src/long_text/: filter.rs  mod.rs
crates/skilllite-agent/src/mcp_client/: bootstrap.rs  mod.rs  runtime.rs  stdio.rs
crates/skilllite-agent/src/seed/: examples.seed.md  execution.seed.md  planning.seed.md  rules.seed.json  system.seed.md
crates/skilllite-agent/src/skills/: executor.rs  infer_entry.rs  loader.rs  mod.rs  security.rs  usage_stats.rs
crates/skilllite-agent/src/types/: chat.rs  config.rs  env_config.rs  event_sink.rs  feedback.rs  llm_usage.rs  mcp_servers.rs  mod.rs  string_utils.rs  task.rs
crates/skilllite-assistant/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/skilllite-assistant/src-tauri/capabilities/: default.json
crates/skilllite-commands/: Cargo.toml
crates/skilllite-commands/src/: audit_report.rs  channel_serve.rs  env.rs  error.rs  evolution.rs  evolution_desktop.rs  evolution_status.rs  execute.rs  ide.rs  init.rs  lib.rs  planning_rules_gen.rs  quickstart.rs  reindex.rs  replay.rs  replay_quality.rs  scan.rs  schedule.rs  security.rs  wiki.rs
crates/skilllite-core/: Cargo.toml
crates/skilllite-core/src/: artifact_store.rs  env_spec.rs  error.rs  lib.rs  observability.rs  path_validation.rs  paths.rs  protocol.rs  scan_cache.rs  schedule.rs
crates/skilllite-evolution/: Cargo.toml
crates/skilllite-evolution/src/: audit.rs  config.rs  error.rs  evolution_memory_rollup.rs  external_learner.rs  feedback.rs  growth_schedule.rs  lib.rs  llm.rs  memory_learner.rs  prompt_learner.rs  run.rs  scope.rs  shallow_preflight.rs  skill_synth.rs  snapshots.rs
crates/skilllite-fs/: Cargo.toml
crates/skilllite-fs/src/: backup.rs  dir.rs  error.rs  grep.rs  lib.rs  read_write.rs  search_replace.rs
crates/skilllite-sandbox/: Cargo.toml
crates/skilllite-sandbox/examples/: native_sandbox_microbench.rs
crates/skilllite-sandbox/src/: bash_validator.rs  common.rs  error.rs  lib.rs  linux.rs  log.rs  macos.rs  move_protection.rs  network_proxy.rs  runner.rs  runtime_resolver.rs  sandbox_backend.rs  seatbelt.rs  seccomp.rs  windows.rs
crates/skilllite-sandbox/tests/: macos_sandbox_smoke.rs
crates/skilllite-services/: Cargo.toml
crates/skilllite-services/src/: error.rs  lib.rs  workspace.rs
crates/skilllite-swarm/: Cargo.toml
crates/skilllite-swarm/src/: discovery.rs  error.rs  handler.rs  lib.rs  llm_routing.rs  routing.rs  swarm_auth.rs
skillbox/: Cargo.toml
skillbox/examples/python_skill/: SKILL.md
skillbox/src/: cli.rs  config.rs  main.rs  mcp.rs  observability.rs
skillbox/src/agent/: agent_loop.rs  chat_session.rs  llm.rs  long_text.rs  mod.rs  prompt.rs  rpc.rs  skills.rs  task_planner.rs  tools.rs  types.rs
skillbox/src/chat/: memory.rs  mod.rs  rpc.rs  session.rs  transcript.rs
skillbox/src/commands/: env.rs  ide.rs  init.rs  mod.rs  quickstart.rs  reindex.rs  skill.rs
skillbox/src/env/: builder.rs
skillbox/src/executor/: rpc.rs  session.rs
skillbox/src/sandbox/: bash_validator.rs  common.rs  executor.rs  linux.rs  log.rs  macos.rs  mod.rs  move_protection.rs  network_proxy.rs  seatbelt.rs  seccomp.rs  windows.rs
skillbox/src/skill/: dependency_resolver.rs  deps.rs  metadata.rs  mod.rs  schema.rs
skilllite/: Cargo.toml  README.md
skilllite/examples/python_skill/: SKILL.md
skilllite/src/: cli.rs  command_registry.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  observability.rs  path_validation.rs  protocol.rs  stdio_rpc.rs  stdio_rpc_params.rs  swarm_executor.rs
skilllite/src/agent/: agent_loop.rs  chat.rs  chat_session.rs  llm.rs  memory.rs  mod.rs  planning_rules.rs  prompt.rs  rpc.rs  skills.rs  task_planner.rs  tools.rs  types.rs
skilllite/src/commands/: env.rs  evolution.rs  execute.rs  ide.rs  init.rs  mod.rs  planning_rules_gen.rs  quickstart.rs  reindex.rs  scan.rs  security.rs  skill.rs
skilllite/src/commands/skill/: add.rs  (+6 more)
skilllite/src/config/: env_keys.rs  loader.rs  mod.rs  schema.rs
skilllite/src/dispatch/: artifact.rs  channel_serve.rs  execute.rs  gateway.rs  migrate.rs  mod.rs  protocol.rs  skill.rs
skilllite/src/env/: builder.rs
skilllite/src/executor/: memory.rs  mod.rs  transcript.rs
skilllite/src/mcp/: handlers.rs  mod.rs  scan.rs  state.rs  tools.rs
skilllite/src/sandbox/: bash_validator.rs  executor.rs  linux.rs  log.rs  macos.rs  mod.rs  seatbelt.rs  windows.rs
skilllite/src/skill/: dependency_resolver.rs  deps.rs  metadata.rs  mod.rs
skilllite/tests/: cli_basic.rs  cli_evolution_workspace.rs  cli_gateway.rs  cli_init.rs  cli_mcp.rs  cli_security.rs  cli_skill_management.rs  e2e_macos_sandbox.rs  e2e_minimal.rs
skilllite/tests/common/: mod.rs
(+920 files in other folders)
