[workspace]
# Tauri app (src-tauri) not in members: requires glib/GTK on Linux; build with:
#   cargo build --manifest-path crates/skilllite-assistant/src-tauri/Cargo.toml
members = ["skilllite", "crates/*"]
exclude = ["crates/skilllite-assistant", "crates/crates"]
resolver = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
