[workspace]
# Tauri app (src-tauri) not in members: requires glib/GTK on Linux; build with:
#   cargo build --manifest-path crates/skilllite-assistant/src-tauri/Cargo.toml
members = ["skilllite", "crates/*"]
exclude = ["crates/skilllite-assistant", "crates/crates"]
resolver = "2"

[workspace.package]
version = "0.1.15"
edition = "2021"
authors = ["EX <boyex345@gmail.com>"]
license = "MIT"
repository = "https://github.com/EXboys/skilllite"

[profile.release]
lto = true
strip = true
opt-level = "z"
