[package]
name = "skillbox"
version = "0.1.0"
edition = "2021"
authors = ["EX <boyex345@gmail.com>"]
description = "A lightweight Skills secure execution engine"
license = "MIT"
repository = "https://github.com/EXboys/skilllite"
keywords = ["agent", "skills", "sandbox", "security"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["sandbox"]
sandbox = []
executor = ["rusqlite"]
# memory_vector = ["executor", "sqlite-vec"]  # 后续扩展

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.10"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
regex = "1.10"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Executor feature: session, transcript, memory (BM25), plan
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "signal"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

# Windows dependencies (for future Job Object implementation)
# Currently using WSL2 bridge which doesn't require additional deps
[target.'cfg(target_os = "windows")'.dependencies]
# windows-rs can be added later for native Job Object support:
# windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_Security"] }

[[bin]]
name = "skillbox"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
