[package]
name = "skilllite"
version = "0.1.9"
edition = "2021"
authors = ["EX <boyex345@gmail.com>"]
description = "A lightweight Skills secure execution engine"
license = "MIT"
repository = "https://github.com/EXboys/skilllite"
keywords = ["agent", "skills", "sandbox", "security"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["sandbox", "audit", "agent"]
sandbox = []
audit = ["dep:ureq"]
executor = ["sandbox", "rusqlite"]
agent = ["executor", "dep:tokio", "dep:reqwest", "dep:futures-util", "dep:rustyline"]
# 仅用于 skilllite-sandbox 构建，含 sandbox+audit，不在 default 中
sandbox_binary = ["sandbox", "audit"]
# memory_vector = ["executor", "sqlite-vec"]  # 后续扩展

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.10"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
regex = "1.10"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Executor feature: session, transcript, memory (BM25), plan
rusqlite = { version = "0.31", optional = true, features = ["bundled"] }

# Agent feature: LLM HTTP client, async runtime, CLI interaction
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "io-util", "process"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = { version = "0.3", optional = true }
rustyline = { version = "14", optional = true }
uuid = { version = "1", features = ["v4"] }

# Audit feature: lightweight sync HTTP client for OSV API queries
ureq = { version = "2", optional = true, features = ["json"] }

# ClawHub registry: zip extraction for skill bundles
zip = "0.6"

# IPC daemon: thread pool for concurrent request handling
rayon = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "signal"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

# Windows dependencies (for future Job Object implementation)
# Currently using WSL2 bridge which doesn't require additional deps
[target.'cfg(target_os = "windows")'.dependencies]
# windows-rs can be added later for native Job Object support:
# windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_Security"] }

[[bin]]
name = "skilllite"
path = "src/main.rs"

# skilllite-sandbox: 沙箱 + MCP，无 executor/agent。
# required-features 确保 cargo install 默认只装 skilllite；装 sandbox 需显式指定 feature
# 构建: cargo build --bin skilllite-sandbox --no-default-features --features sandbox_binary
[[bin]]
name = "skilllite-sandbox"
path = "src/main.rs"
required-features = ["sandbox_binary"]

[profile.release]
lto = true
strip = true
opt-level = "z"
