[package]
name = "skilllite"
version = "0.1.9"
edition = "2021"
default-run = "skilllite"
authors = ["EX <boyex345@gmail.com>"]
description = "A lightweight Skills secure execution engine"
license = "MIT"
repository = "https://github.com/EXboys/skilllite"
keywords = ["agent", "skills", "sandbox", "security"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["sandbox", "audit", "agent", "swarm"]
sandbox = []
audit = ["skilllite-sandbox/audit", "dep:ureq"]
executor = ["sandbox", "dep:skilllite-executor"]
agent = ["executor", "dep:skilllite-agent", "dep:tokio", "dep:reqwest", "dep:rustyline", "dep:uuid"]
# 仅用于 skilllite-sandbox 构建，含 sandbox+audit，不在 default 中
sandbox_binary = ["sandbox", "audit"]
# Memory 向量检索：启用后 memory_search 使用语义搜索（需配置 embedding API）
memory_vector = ["executor", "agent", "skilllite-agent/memory_vector"]
# P2P 组网：mDNS 发现、Swarm 守护进程
swarm = ["dep:skilllite-swarm"]

[dependencies]
skilllite-core = { path = "../crates/skilllite-core" }
skilllite-sandbox = { path = "../crates/skilllite-sandbox" }
skilllite-executor = { path = "../crates/skilllite-executor", optional = true }
skilllite-agent = { path = "../crates/skilllite-agent", optional = true }
skilllite-swarm = { path = "../crates/skilllite-swarm", optional = true }

clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"

# Agent feature deps re-exported for commands that use them directly
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "io-util", "process"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream", "rustls-tls"] }
rustyline = { version = "14", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }

# Audit feature: lightweight sync HTTP client for ClawHub registry
ureq = { version = "2", optional = true, features = ["json"] }

# ClawHub registry: zip extraction for skill bundles
zip = "0.6"

# IPC daemon: thread pool for concurrent request handling
rayon = "1.10"

[[bin]]
name = "skilllite"
path = "src/main.rs"

# skilllite-sandbox: 沙箱 + MCP，无 executor/agent。
# 构建: cargo build -p skilllite --bin skilllite-sandbox --no-default-features --features sandbox_binary
[[bin]]
name = "skilllite-sandbox"
path = "src/bin/skilllite-sandbox.rs"
required-features = ["sandbox_binary"]
