[package]
name = "skilllite-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SkillLite CLI command implementations"

[features]
default = []
agent = ["dep:skilllite-agent", "dep:tokio", "dep:uuid", "dep:rustyline", "skilllite-core/async-resolve"]
audit = ["skilllite-sandbox/audit", "dep:ureq", "dep:zip"]

[dependencies]
skilllite-core = { path = "../skilllite-core", features = ["async-resolve"] }
skilllite-fs = { path = "../skilllite-fs" }
skilllite-evolution = { path = "../skilllite-evolution" }
skilllite-sandbox = { path = "../skilllite-sandbox" }
skilllite-agent = { path = "../skilllite-agent", optional = true }

anyhow = "1.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
walkdir = "2.5"
serde_json = "1.0"
tracing = "0.1"
regex = "1.10"
dirs = "5.0"
tempfile = "3.10"
zip = { version = "0.6", optional = true }
ureq = { version = "2", optional = true, features = ["json"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "io-util"] }
uuid = { version = "1", optional = true, features = ["v4"] }
rustyline = { version = "14", optional = true }
