[package]
name = "skilllite-core"
version = "0.1.9"
edition = "2021"
authors = ["EX <boyex345@gmail.com>"]
description = "SkillLite Core: config, skill metadata, path validation, observability"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
