[package]
name = "skilllite-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SkillLite FS: centralized file read/write/search_replace"

[dependencies]
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
