[package]
name = "skilllite-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Safe file operations for AI agents — read, write, search & replace with path validation"
keywords = ["filesystem", "file-operations", "search-replace", "agent", "tools"]
categories = ["filesystem", "development-tools"]

[dependencies]
anyhow = "1.0"
regex = "1.10"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.10"
