[package]
name = "skilllite-sandbox"
version = "0.1.9"
edition = "2021"
authors = ["EX <boyex345@gmail.com>"]
description = "SkillLite Sandbox: secure execution engine + environment builder"
license = "MIT"

[features]
default = []
audit = ["dep:ureq"]

[dependencies]
skilllite-core = { path = "../skilllite-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.10"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Audit feature: lightweight sync HTTP client for OSV API queries
ureq = { version = "2", optional = true, features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "signal"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
